Fix alignment issue

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,5 +25,5 @@ mat-card-header > mat-icon {
 }
 
 mat-card-title > mat-icon {
-    vertical-align: middle;
+    vertical-align: bottom;
 }
